--- a/services/package.json
+++ b/services/package.json
@@ -1,5 +1,13 @@
 {
   "dependencies": {
+    "@opentelemetry/api": "^1.9.0",
+    "@opentelemetry/auto-instrumentations-node": "^0.67.0",
+    "@opentelemetry/exporter-metrics-otlp-http": "^0.208.0",
+    "@opentelemetry/exporter-trace-otlp-http": "^0.208.0",
+    "@opentelemetry/instrumentation-express": "^0.57.0",
+    "@opentelemetry/instrumentation-http": "^0.208.0",
+    "@opentelemetry/instrumentation-runtime-node": "^0.22.0",
+    "@opentelemetry/sdk-node": "^0.208.0",
     "express": "^5.1.0",
     "nodemon": "^3.1.11"
   }
